aggiunta README con ordine di esecuzione. Pulizia repository e modifiche ai commenti

--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -1,6 +1,26 @@
 {
  "cells": [
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Cleaning and pre-processing the FBref data\n",
+    "The dataset needs to be processed because there are two records referring the same match: the first record refers to the statistics reached by the home team against the away team and the second one viceversa. These values representing the same match must be combined.\n",
+    "\n",
+    "Each pair of rows referencing the same match is merged through the following 3 steps:\n",
+    "- filter previous statistics of the 2 teams involved in the match and two datasets are obtained: one referring to home stats and one referring to away stats\n",
+    "- computing the average of the 5 previous matches for each statistic\n",
+    "- subtracting averages features: avg(home features) – avg(away features)\n",
+    "\n",
+    "Another important feature is the ranking of the teams which is calculated as the number of direct matches won by the two teams in all the previous times they have met. Thus for each match there are two additional feature: home rank and away rank. The obtained features are stored into \"Stats/cleaned_stats.csv\".\n",
+    "\n",
+    "The classes used to make this are MatchAnalysis (analysis.py) and Ranking (ranking.py). \n",
+    "\n",
+    "Old stats are overwritten by the new ones in the \"Stats/cleaned_stats.csv\". "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -30,21 +50,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#leggo tutti i match (doppi perché ci sono le statistiche x ogni squadra)\n",
+    "#reading all the matches from \"Stats/all_stats.csv\" (double because there are statistics for each team) \n",
     "ma.read_matches(utils.merged_statistics) \n",
-    "#creo una lista di oggetti (lista di squadre)\n",
+    "#creation of a list of objects (list of teams)\n",
     "ma.create_team_dataset()\n",
-    "#divido le partite di casa da quelle in trasferta\n",
+    "#dividing the home games from the away ones\n",
     "ma.divide_and_merge_home_away()\n",
-    "#vado a combinarle\n",
+    "#combine 2 datasets computating the average\n",
     "ma.reduce_dataset_with_avg(number = 5, path=utils.dataset_without_text)"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Salvataggio squadre"
+    "Teams are saved into a json file with an associated identification code. "
    ]
   },
   {
@@ -64,13 +85,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#prendo il valore dell'ultimo id, in modo tale da assegnarlo alla prossima squadra\n",
+    "#I take the value of the last id, in order to assign it to the next team\n",
     "cont = 0\n",
     "for team, id in data.items():\n",
     "    if id == cont:\n",
     "        cont+=1\n",
     "\n",
-    "#assegno le squadre non presenti su file\n",
+    "#I assign the teams not present on file\n",
     "keys = data.keys()\n",
     "for team in ma.matches_by_team:\n",
     "    if team.name.lower() not in keys:\n",
@@ -105,7 +126,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.8 (default, Apr 13 2021, 12:59:45) \n[Clang 10.0.0 ]"
   },
   "orig_nbformat": 4,
   "vscode": {
