--- a/completed_dataset.ipynb
+++ b/completed_dataset.ipynb
@@ -1,11 +1,17 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Merge statistiche e predizioni\n",
-    "Questo dataset contiene tutti i dati relativi alla differenza delle medie (degli ultimi 5 match) delle due squadre e le predizioni (il testo descrittivo) di football prediction con anche l'etichetta di predizione."
+    "# Merging of statistics and predictions\n",
+    "This phase merge the two datasets (cleaned_stats.csv and cleaned_news.csv) by 3 parameters: \n",
+    "- home team \n",
+    "- away team\n",
+    "- season\n",
+    "The merge isn’t done by date because sometimes the date of a match in the first dataset is not equal to the date of the same match in the second dataset.\n",
+    "At the end of the process, a completed_dataset.csv is obtained."
    ]
   },
   {
@@ -34,10 +40,11 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Dato che alcune squadre potrebbero non combaciare (upper o lower case), trasformo il testo tutto in lower"
+    "Since some team names may not match (upper or lower case), I change all the team names to lower"
    ]
   },
   {
