--- a/final_model.ipynb
+++ b/final_model.ipynb
@@ -1,10 +1,14 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Modello finale"
+    "# Final classification - Random Forest\n",
+    "The aim of this point is to build a model which can be used to predict outcomes (0, 1, 2) of future matches. The previous Decision Tree classifier obtains labels which are combined with the statistics of the corresponding match.\n",
+    "\n",
+    "The final classification is done using a Random Forest model."
    ]
   },
   {
@@ -30,13 +34,14 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Qui devo: \n",
-    "* caricare il modello di football prediction, ottenere le etichette ed usarle nel dataset finale\n",
-    "* convertire ciascuna etichetta in 0 1 2 (verificare che non ci siano dati vuoti)\n",
-    "* allenare il modello su tutti i dati"
+    "Here I have to:\n",
+    "* load the football prediction model, obtain the labels and use them in the final dataset\n",
+    "* convert each label to 0 1 2 (check for empty data)\n",
+    "* train the model on all data"
    ]
   },
   {
@@ -53,7 +58,7 @@
     "with open(utils.teams_codes, 'rb') as json_file:\n",
     "    id_set = json.load(json_file)\n",
     "\n",
-    "#prendo il valore dell'ultimo id, in modo tale da assegnarlo alla prossima squadra\n",
+    "#I take the value of the last id, in order to assign it to the next team\n",
     "cont = 0\n",
     "for team, id in id_set.items():\n",
     "    if id == cont:\n",
@@ -100,10 +105,11 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Ora queste etichette le metto nel dataset completo"
+    "Now I put these labels in the complete dataset"
    ]
   },
   {
@@ -128,13 +134,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Ora che ho ottenuto le etichette, i valori nulli li sostituisco con -1, se no perdo le partite"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 57,
    "metadata": {},
@@ -144,20 +143,6 @@
     "final_dataset['away'] = final_dataset['away'].astype(float)\n",
     "final_dataset['prediction'] = final_dataset['prediction'].astype(float)\n",
     "final_dataset['result'] = final_dataset['result'].astype(float)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Ora che ho ottenuto il dataset come deve essere ottenuto, posso fare la classificazione secondo Decision Tree o Random Forest"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Normalizzazione dei dati"
    ]
   },
   {
@@ -225,34 +210,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.5766871165644172\n",
-      "0.5828220858895705\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import sklearn.metrics as mtr\n",
     "\n",
-    "accuracy = 0\n",
-    "min_acc = 0.58\n",
-    "#min_acc = 0.52\n",
-    "while(accuracy < min_acc):\n",
-    "    model.fit(X_train, y_train)\n",
-    "    y_pred = model.predict(X_test)\n",
-    "    analysis = pd.DataFrame()\n",
-    "            \n",
-    "    report = mtr.classification_report(y_test, y_pred, output_dict=True, zero_division=0)\n",
-    "\n",
-    "    if accuracy < report['accuracy']:\n",
-    "        accuracy = report['accuracy']\n",
-    "        print(accuracy)\n",
+    "model.fit(X_train, y_train)\n",
+    "y_pred = model.predict(X_test)\n",
+    "analysis = pd.DataFrame()\n",
+    "        \n",
+    "report = mtr.classification_report(y_test, y_pred, output_dict=True, zero_division=0)\n",
     "\n",
     "analysis = {\n",
     "        'Model': 'DecisionTree', 'Accuracy': report['accuracy'],\n",
