--- a/football_predictions.ipynb
+++ b/football_predictions.ipynb
@@ -1,12 +1,19 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Ottenimento link news\n",
+    "# Obtaining the FootballPredictions data\n",
+    "This script aims to retrieve short descriptions from the site https://footballpredictions.com/ published before each match. \n",
     "\n",
-    "Questo script si pone come obiettivo quello di recuperare brevi descrizioni dal sito https://footballpredictions.com/ pubblicati prima di ciascun match. Andiamo a recuperare le pagine relative alle partite giocate in ogni data di campionato."
+    "FootballPredictions (FP) is a website of football news which allow to search articles, published before a match, setting in the url the date of the match you want to know about.\n",
+    "\n",
+    "E.g. if you want to know about matches played in 23/10/2022 you need to set the following url:\n",
+    "https://footballpredictions.com/footballpredictions/?date=23-10-2022\n",
+    "\n",
+    "The class used to obtain descriptions (news) from FootballPredictions web pages is FootballPredictions (football_predictions.py)."
    ]
   },
   {
@@ -32,12 +39,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Ottenimento link per data\n",
-    "\n",
-    "Raggruppamento delle date in cui si svolgono le partite e la data viene settata in un url che verrà utilizzato per andare a cercare le partite"
+    "# Obtaining links\n",
+    "Grouping of the dates in which the matches take place and the date is set in a url that will be used to go and search for the matches"
    ]
   },
   {
@@ -46,15 +53,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#ta.get_urls()\n",
-    "#ta.save_urls(utils.json_link_matches)"
+    "ta.get_urls()\n",
+    "ta.save_urls(utils.json_link_matches)"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Una volta ottenuti i link andare combinando il link principale con la data delle partite, si va a cercare nella pagina al link tutti i vari link sotto al div relativo alla Serie A che portano alle pagine delle descrizioni pre-match."
+    "Once the links have been obtained, combine the main link with the date of the matches, then on the page at the link you can search for all the various links under the Serie A div that lead to the pages of the pre-match descriptions."
    ]
   },
   {
@@ -63,37 +71,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#ta.read_urls(utils.json_link_matches)\n",
-    "#ta.get_predictions(utils.matches_description, True)"
+    "ta.read_urls(utils.json_link_matches)\n",
+    "ta.get_predictions(utils.matches_description, True)"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Normalizzazione testo\n",
+    "# Text normalization\n",
     "\n",
-    "Vengono cercate le partite per cui non sono stati trovati risultati e vengono scaricati"
+    "Games for which no results were found are searched for and downloaded"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/simonemalesardi/Documents/Università/Retrieval/The-winner-of-the-next-game/football_predictions.py:143: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  self.matches['date'] = pd.to_datetime(self.matches['date'], format='%Y-%m-%d')\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "ta.read_all_predictions(utils.matches_description)\n",
     "ta.recovery_games()"
@@ -101,59 +97,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>date</th>\n",
-       "      <th>home</th>\n",
-       "      <th>away</th>\n",
-       "      <th>description</th>\n",
-       "      <th>prediction</th>\n",
-       "      <th>season</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "Empty DataFrame\n",
-       "Columns: [date, home, away, description, prediction, season]\n",
-       "Index: []"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#d = ta.recoveries[(ta.recoveries.home == 'Juventus') & (ta.recoveries.away == 'Napoli')].date\n",
     "ta.matches[(ta.matches.home == 'Lecce') & (ta.matches.away == 'Cagliari')]\n",
     "#ta.recoveries[(ta.recoveries.home == 'Juventus') & (ta.recoveries.away == 'Napoli')]\n",
     "ta.df[(ta.df.home == 'Lecce') & (ta.df.away == 'Cagliari')]"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The fix_dates method saves all the news in the cleanes_news.csv"
    ]
   },
   {
@@ -459,7 +418,7 @@
     }
    ],
    "source": [
-    "print(len(ta.matches), len(ta.recoveries)) #i due dataset sono di grandezza diversa -> recoveries non è stato pulito da partite doppie (recuperi, partite rimandate)"
+    "print(len(ta.matches), len(ta.recoveries)) #the two datasets are of different sizes -> recoveries has not been cleaned of double entries (recoveries, postponed matches)"
    ]
   },
   {
@@ -690,7 +649,7 @@
     }
    ],
    "source": [
-    "len(ta.matches), len(ta.df) #i due dataset sono di grandezza uguale"
+    "len(ta.matches), len(ta.df) #the two datasets are of equal size"
    ]
   }
  ],
@@ -710,7 +669,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.8 (default, Apr 13 2021, 12:59:45) \n[Clang 10.0.0 ]"
   },
   "orig_nbformat": 4,
   "vscode": {
