--- a/next_matches.ipynb
+++ b/next_matches.ipynb
@@ -1,12 +1,13 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Ottenimento prossimi match\n",
-    "Lo script deve permettere di prendere i prossimi 10 match. \n",
-    "Verrà fatta una predizione su questi match, prima deve essere calcolata la media di ciascun match che è data dai 5 match precedenti."
+    "# Outcome prediction \n",
+    "The script must allow you to take the next 10 matches.\n",
+    "A prediction will be made on these matches, first the average of each match must be calculated which is given by the previous 5 matches."
    ]
   },
   {
@@ -115,10 +116,11 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Aggiungo le predizioni al dataset dei match"
+    "I add the predictions to the match dataset"
    ]
   },
   {
@@ -134,19 +136,15 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Calcolo delle medie\n",
-    "Per ciascun match devo calcolare le statistiche date dalle medie dei 5 match precedenti e poi devo ottenere la predizione di football_prediction.\n",
-    "Sostituisco inoltre i codici delle squadre"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Per calcolare le medie devo prendere tutti i match di ciascuna squadra"
+    "## Calculation of averages\n",
+    "For each match I have to calculate the statistics given by the averages of the previous 5 matches and then I have to get the prediction of football_prediction.\n",
+    "I also replace the team codes.\n",
+    "\n",
+    "To calculate the averages I have to take all the matches of each team"
    ]
   },
   {
@@ -639,7 +637,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.8 (default, Apr 13 2021, 12:59:45) \n[Clang 10.0.0 ]"
   },
   "orig_nbformat": 4,
   "vscode": {
