--- a/text analysis cross validation.ipynb
+++ b/text analysis cross validation.ipynb
@@ -1,11 +1,14 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Creazione modello text analysis\n",
-    "Ho visto che il decision tree è il modello che mi offre migliori performance, soprattutto con TfIdf e tokenizzazione nltk/regex con stemming PorterStemmer().\n"
+    "# Creation of text analysis model\n",
+    "I have seen that the decision tree is the model that offers me the best performance, especially with TfIdf and nltk/regex tokenization with PorterStemmer() stemming.\n",
+    "\n",
+    "The code pieces are the same as the code pieces of \"analysis.ipynb\", but this is needed for cross validation. "
    ]
   },
   {
@@ -17,14 +20,6 @@
     "from my_tokenizer import MyTokenizer\n",
     "import pandas as pd\n",
     "import util_strings as utils"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "È necessaria la normalizzazione delle feature, dato che nel testo abbiamo i nomi delle squadre ed i soprannomi, vado a sostituire tutte le parole relative alla squadra di casa con home team e stessa cosa per la away team.\n",
-    "Questo viene fatto tramite il metodo feature_normalization()"
    ]
   },
   {
@@ -44,10 +39,9 @@
    "outputs": [],
    "source": [
     "mt.clean_text()\n",
-    "vectorizer = True #se True TfidfVectorizer, se False CountVectorizer\n",
+    "vectorizer = True \n",
     "X_train, X_test, y_train, y_test = mt.set_bigram_and_get_sets(vectorizer) \n",
-    "path_vec = utils.TfidfVectorizer if vectorizer else utils.CountVectorizer\n",
-    "#mt.save_vectorizer(path_vec)"
+    "path_vec = utils.TfidfVectorizer if vectorizer else utils.CountVectorizer"
    ]
   },
   {
@@ -133,9 +127,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Validazione del modello\n",
-    "Viene utilizzata una k-fold cross validation per validare il modello costruito\n",
-    "\n",
+    "# Evaluation of the model\n",
+    "A k-fold cross validation is used to validate the built model\n",
     "https://scikit-learn.org/stable/modules/cross_validation.html"
    ]
   },
@@ -230,7 +223,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.8 (default, Apr 13 2021, 12:59:45) \n[Clang 10.0.0 ]"
   },
   "orig_nbformat": 4,
   "vscode": {
