--- a/text analysis.ipynb
+++ b/text analysis.ipynb
@@ -1,11 +1,13 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Creazione modello text analysis\n",
-    "Ho visto che il decision tree è il modello che mi offre migliori performance, soprattutto con TfIdf e tokenizzazione nltk/regex con stemming PorterStemmer().\n"
+    "# FootbalPrediction classification\n",
+    "After comparing the experimental results 3, the model used is the Decision Tree with TfIdfVectorizer using a trigram approach.\n",
+    "The classification, obtained by the model, belongs to this set of classes: 0 (draw), 1 (home win), 2 (away win).\n"
    ]
   },
   {
@@ -20,11 +22,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "È necessaria la normalizzazione delle feature, dato che nel testo abbiamo i nomi delle squadre ed i soprannomi, vado a sostituire tutte le parole relative alla squadra di casa con home team e stessa cosa per la away team.\n",
-    "Questo viene fatto tramite il metodo feature_normalization()"
+    "The normalization of the features is necessary, given that in the text we have the names of the teams and the nicknames, I am going to replace all the words relating to the home team with home team and the same thing for the away team.\n",
+    "This is done via the feature_normalization() method."
    ]
   },
   {
@@ -35,6 +38,21 @@
    "source": [
     "mt = MyTokenizer(pd.read_csv(utils.completed_dataset, index_col=0))\n",
     "mt.feature_normalization()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Before train the model, texts have to be transformed through several phases:\n",
+    "- punctuation and numbers removing using regex\n",
+    "- tokenization: it allows to split each document into tokens. Nltk is the tokenization chosen because it reaches the highest performance\n",
+    "- stop word filtering: words belonging to the \"stopword set\" are removed because they are considered noisy words\n",
+    "- stemming: it allows to get the root word of each token\n",
+    "\n",
+    "These tokens have to be transformed into vectors of numbers. This can quantify the importance or relevance of words in a document amongst a collection of documents. \n",
+    "A TfidfVectorizer model is built and saved in the \"ML model\" folder."
    ]
   },
   {
@@ -51,12 +69,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Classificazione del modello\n",
-    "Migliori risultati con Decision Tree.\n",
-    "Viene salvato il modello"
+    "## Building the model\n",
+    "The model used is the Decision Tree with TfIdfVectorizer using a trigram approach"
    ]
   },
   {
@@ -87,11 +105,10 @@
     }
    ],
    "source": [
-    "# Allow a decision tree to grow to its full depth\n",
-    "clf = DecisionTreeClassifier(criterion=\"entropy\", max_depth=)\n",
-    "clf.fit(X_train, y_train)\n",
+    "model = DecisionTreeClassifier()\n",
+    "model.fit(X_train, y_train)\n",
     "\n",
-    "y_pred = clf.predict(X_test)\n",
+    "y_pred = model.predict(X_test)\n",
     "report = mtr.classification_report(y_test, y_pred, output_dict=True, zero_division=0)\n",
     "report['accuracy']"
    ]
@@ -133,6 +150,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The built model is saved in the \"ML model\" folder."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
@@ -161,7 +186,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.8 (default, Apr 13 2021, 12:59:45) \n[Clang 10.0.0 ]"
   },
   "orig_nbformat": 4,
   "vscode": {
